syntax = "proto3";
option go_package = "/proto/page";

service Page {
    rpc GetPage(GetPageRequest) returns (GetPageResponse);
    rpc SetPage(SetPageRequest) returns (SetPageResponse);
    rpc InsertPage(InsertPageRequest) returns (InsertPageResponse);
    rpc DeletePageCertainHourBefore(DeletePageRequest) returns (DeletePageResponse);
    rpc DeletePage(DeletePageRequest) returns (DeletePageResponse);
}

message GetPageRequest {
    uint32 PageId = 1;
}

message GetPageResponse {
    uint32 PageId = 1;
	uint32 NextPageId = 2;
	uint32 PrevPageId = 3;
    repeated uint32 ArticleIds = 4;
}

message SetPageRequest {
	uint32 PageId = 1;
    uint32 NextPageId = 2;
    uint32 PrevPageId = 3;
    repeated uint32 ArticleIds = 4;
}

message SetPageResponse {
    bool IsSuccess = 1;
}

message InsertPageRequest {
    uint32 PageId = 1;
    uint32 NextPageId = 2;
    uint32 PrevPageId = 3;
    repeated uint32 ArticleIds = 4;
}

message InsertPageResponse {
    bool IsSuccess = 1;
    uint32 NewPageId = 2;
}

message DeletePageRequest {
    uint32 PageId = 1;
    int32 Hour = 2;
}

message DeletePageResponse {
    uint32 RowAffected = 1;
}